<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) Microsoft Corporation. All rights reserved.
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:showIn="@layout/activity_main"
  tools:context=".fragment.HomeFragment"
>

  <RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/dimen20dip"
    android:background="@color/colorPrimary"
    android:clipChildren="false"
  >

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:src="@drawable/logo_azme"
      android:scaleType="fitEnd"
      android:tint="#34bcf0"
      android:contentDescription="@string/basis_content_description"
    />

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
    >

      <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_title"
        style="@style/Widget.TextView.Home.Title"
      />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_subtitle"
        style="@style/Widget.TextView.Home.Subtitle"
      />

    </LinearLayout>

  </RelativeLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
  >
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    >
      <LinearLayout
        android:id="@+id/lastUpdateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen10dip"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/dimen20dip"
        android:background="@color/creamWhite"
        android:orientation="vertical"
      >

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
        >

          <TextView
            android:id="@+id/recentUpdateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/home_recent_updates_title"
            android:textSize="@dimen/home_recent_updates_size"
            style="@style/Widget.TextView.Blue"
          />

          <Button
            android:id="@+id/viewAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_recent_updates_view_all"
            android:textColor="@color/generalTextColor"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Widget.Button.Normal"
          />

        </LinearLayout>

        <include
          layout="@layout/recent_update_item"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:paddingTop="@dimen/dimen10dip"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/dimen20dip"
        android:layout_below="@id/lastUpdateContainer"
      >

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_title"
          android:textSize="@dimen/home_highlights_size"
          android:layout_marginBottom="@dimen/dimen10dip"
          style="@style/Widget.TextView.White.Normal"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_1"
          style="@style/Widget.TextView.White.Highlight"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_2"
          style="@style/Widget.TextView.White.Highlight"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_3"
          style="@style/Widget.TextView.White.Highlight"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_4"
          style="@style/Widget.TextView.White.Highlight"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_5"
          style="@style/Widget.TextView.White.Highlight"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_6"
          style="@style/Widget.TextView.White.Highlight"
        />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/home_hightlight_7"
          style="@style/Widget.TextView.White.Highlight"
        />

      </LinearLayout>

    </RelativeLayout>
  </ScrollView>

</LinearLayout>