<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) Microsoft Corporation. All rights reserved.
-->
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:showIn="@layout/activity_main"
  tools:context=".fragment.GetDeviceIdFragment"
>

  <include
    android:id="@+id/toolbarHeaderView"
    layout="@layout/toolbar_header"
  />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbarHeaderView"
  >
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/dimen15dip"
    >

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_get_device_id"
        android:contentDescription="@string/basis_content_description"
      />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dip"
        android:text="@string/get_the_device_id_message"
        style="@style/Widget.TextView.GetDevice.Message"
      />

      <Button
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen15dip"
        android:text="@string/get_the_device_id_share_button"
        android:drawableLeft="@drawable/ic_share_device_id"
        style="@style/Widget.Button.GetDeviceID"
      />

      <Button
        android:id="@+id/copyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dip"
        android:layout_marginBottom="@dimen/dimen15dip"
        android:text="@string/get_the_device_id_copy_button"
        android:drawableLeft="@drawable/ic_copy_device_id"
        style="@style/Widget.Button.GetDeviceID"
      />

    </LinearLayout>
  </ScrollView>

</RelativeLayout>